--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="contact"></div>
+    <div id="contact">
+    </div>
 
     <script src="index.js"></script>
 </body>
