--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div id="contact">
     </div>
-
+    
+    <script src="a-lists.js"></script>
     <script src="index.js"></script>
-    <script src="lists.js"></script>
 </body>
 </html>
 
