--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <script src="a-lists.js"></script>
     <script src="index.js"></script>
+    <script src="util.js"></script>
 </body>
 </html>
 
